--- a/StudentAssistant/pom.xml
+++ b/StudentAssistant/pom.xml
@@ -21,5 +21,23 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>com.jfoenix</groupId>
+    	<artifactId>jfoenix</artifactId>
+    	<version>9.0.6</version>
+    </dependency>
   </dependencies>
+  <build>
+  	<plugins>
+    	<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-compiler-plugin</artifactId>
+                <version>3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
