--- a/StudentAssistant/.classpath
+++ b/StudentAssistant/.classpath
@@ -13,9 +13,9 @@
 	</classpathentry>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
+			<attribute name="test" value="true"/>
 			<attribute name="optional" value="true"/>
 			<attribute name="maven.pomderived" value="true"/>
-			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
@@ -28,5 +28,30 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="lib/commons-io-2.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-lang3-3.8.jar"/>
+	<classpathentry kind="lib" path="lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="lib/commons-net-3.6.jar"/>
+	<classpathentry kind="lib" path="lib/commons-text-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-2.33.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-core-js-2.33.jar"/>
+	<classpathentry kind="lib" path="lib/htmlunit-cssparser-1.2.0.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.4.10.jar"/>
+	<classpathentry kind="lib" path="lib/httpmime-4.5.6.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-client-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-http-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-io-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-util-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/jetty-xml-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/neko-htmlunit-2.33.jar"/>
+	<classpathentry kind="lib" path="lib/serializer-2.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-api-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-client-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/websocket-common-9.4.12.v20180830.jar"/>
+	<classpathentry kind="lib" path="lib/xalan-2.7.2.jar"/>
+	<classpathentry kind="lib" path="lib/xercesImpl-2.12.0.jar"/>
+	<classpathentry kind="lib" path="lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
