Added HtmlUnit dependency in pom file (maven) and removed library.

--- a/StudentAssistant/pom.xml
+++ b/StudentAssistant/pom.xml
@@ -26,6 +26,11 @@
     	<artifactId>jfoenix</artifactId>
     	<version>9.0.6</version>
     </dependency>
+    <dependency>
+	    <groupId>net.sourceforge.htmlunit</groupId>
+	    <artifactId>htmlunit</artifactId>
+	    <version>2.33</version>
+	</dependency> 
   </dependencies>
   <build>
   	<plugins>
