--- a/StudentAssistant/pom.xml
+++ b/StudentAssistant/pom.xml
@@ -30,7 +30,17 @@
 	    <groupId>net.sourceforge.htmlunit</groupId>
 	    <artifactId>htmlunit</artifactId>
 	    <version>2.33</version>
-	</dependency> 
+	</dependency>
+    <dependency>
+    	<groupId>org.controlsfx</groupId>
+    	<artifactId>controlsfx</artifactId>
+    	<version>8.40.14</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.controlsfx</groupId>
+    	<artifactId>controlsfx-samples</artifactId>
+    	<version>8.20.8</version>
+    </dependency>
   </dependencies>
   <build>
   	<plugins>
