--- a/StudentAssistant/pom.xml
+++ b/StudentAssistant/pom.xml
@@ -6,7 +6,6 @@
   <artifactId>StudentAssistant</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>StudentAssistant</name>
   <url>http://maven.apache.org</url>
 
@@ -47,7 +46,20 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
-            </plugin>
-        </plugins>
-    </build>
+         </plugin>
+         <plugin>
+    		<artifactId>maven-assembly-plugin</artifactId>
+    			<configuration>
+        			<archive>
+            			<manifest>
+                			<mainClass>unb.cs2043.student_assistant.App</mainClass>
+            			</manifest>
+        			</archive>
+        	<descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+        </descriptorRefs>
+    </configuration>
+</plugin>
+	</plugins>
+  </build>
 </project>
